# otus-python-professional

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  logs  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
configs/: log_analyzer.yaml
homeworks/01_log_analyzer/: config.yaml  log_analyzer.py  report-2017.06.30.html
reports/: report-2017.07.01.html  report_20170701.html
src/common/: cli.py  config.py  logging.py  paths.py
src/log_analyzer/: README.md  main.py  reader.py  report.py  stats.py
src/scoring_api/: api.py  readme.md  scoring.py  test.py
src/typing_challenges/: Optional.py  any.py  await.py  callable.py  class_var.py  decorator.py  dict.py  empty_tuple.py  final.py  generic.py  generic2.py  generic3.py  instance_var.py  kwargs.py  list.py  literal.py  literal_string.py  parameter.py  self.py  tuple.py  typealias.py  typed_dict.py  typed_dict_2.py  typed_dict_3.py  union.py  unpack.py  variable.py
tests/: conftest.py  test_reader.py
tests/01_log_analyzer/: test_01.py
tests/unit/log_analyzer/: test_report.py  test_stats.py
tests/unit/scoring_api/: test_scoring_api.py  test_store.py
